<?xml version="1.0" encoding="utf-8"?>  
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:gravity="center">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow>
           <LinearLayout
				android:id="@+id/menu_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_frame_gray"
                android:clickable="true"
                android:orientation="vertical" >
                
		    <ImageView 
		        android:id="@+id/button_user_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:scaleType="fitXY"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/ic_menu_piture"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:padding="5dp"
				android:text="@string/menu_picture" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_frame_gray"
                android:clickable="true"
                android:orientation="vertical" >

		    <ImageView 
		        android:id="@+id/button_user_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:scaleType="fitXY"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/ic_menu_gallery"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
		        	android:layout_gravity="center_horizontal"
                    android:text="@string/menu_gallery" />
            </LinearLayout>
            <!-- 好友数 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_frame_gray"
                android:clickable="true"
                android:orientation="vertical" >

		    <ImageView 
		        android:id="@+id/button_user_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:scaleType="fitXY"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/ic_menu_app"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/menu_app" />
            </LinearLayout>
        </TableRow>
        <TableRow>

           <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_frame_gray"
                android:clickable="true"
                android:orientation="vertical" >

		    <ImageView 
		        android:id="@+id/button_user_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:scaleType="fitXY"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/ic_menu_media"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/menu_media" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_frame_gray"
                android:clickable="true"
                android:orientation="vertical" >

		    <ImageView 
		        android:id="@+id/button_user_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:scaleType="fitXY"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/ic_menu_file"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/menu_file" />
            </LinearLayout>
            <!-- 好友数 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/table_frame_gray"
                android:clickable="true"
                android:orientation="vertical" >

		    <ImageView 
		        android:id="@+id/button_user_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:scaleType="fitXY"
		        android:layout_marginTop="5dp"
		        android:background="@drawable/ic_menu_history"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/menu_history" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>